# enterprise-rag

./: .env.example  .gitignore  INSTALLATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
frontend/: index.html
scripts/: ingest_documents.py  test.py
src/: config.py  main.py
src/api/: dependencies.py  models.py  routes.py
src/ingestion/: document_loader.py  embedder.py  text_processor.py
src/llm/: generator.py  prompts.py
src/search/: hybrid_search.py  keyword_search.py  vector_store.py
