[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise RAG Knowledge Base with Hybrid Search"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Document Processing
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "unstructured>=0.11.0",
    
    # Vector & Search
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "rank-bm25>=0.2.2",
    
    # LLM Integration
    "openai>=1.10.0",
    "tiktoken>=0.5.2",
    
    # Utilities
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "ipython>=8.18.0",
]

aws = [
    "boto3>=1.34.0",
    "langchain-aws>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]